--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.play:core:1.10.0'
+    implementation 'com.google.android.material:material:1.0.0'
+
 
 }
